Thu Sep  2 11:32:57 1993  Kevin Layer  (layer at sole)

	* fi-lemacs.el: just found out that the active-p menu predicates
	run with the locals from the buffer in the screen where the
	menubar resides.  If fi:package is something, like :pclos, that
	doesn't exist in the lisp world, then running the active-p preds
	that do fi:eval-in-lisp causes problems.  So, bind fi:package to
	nil.

Wed Sep  1 16:08:59 1993  Kevin Layer  (layer at sole)

	* fi-lemacs.el: lots of fixes, improvements

	* fi-lze.el: remove fi::error-if-request-in-progress, since it was
	turned off anyway; remove fi:reset-background-request since it was
>>>	never documented or needed; fi:lisp-evals-always-compile initial
	value is `t'; fix docstrings.

	* fi-modes.el: use fi:common-lisp-mode-hook instead of
	fi:lisp-mode-hook to hack mode-line-process; put readtable in
	mode-line-process; lemacs hacks

>>>	* fi-subproc.el: new fi:display-buffer-function for lemacs; new
	variable fi:new-screen-for-common-lisp-buffer.

	* fi-utils.el: fi::switch-to-buffer-new-screen and support

	* examples/emacs.el: fix for new fi-site-init

Tue Aug 31 20:00:00 1993  Kevin Layer  (layer@sole)

>>>	* fi-subproc.el: add fi:readtable defvar

	* fi-basic-lep.el: pass :buffer-readtable to make-session

	* fi-modes.el: note readtable in mode line formatting; revamp -*-
	mode line parsing to be more general (to handle "readtable: ").

Tue Aug 31 16:23:49 1993  Kevin Layer  (layer@sole)

	* fi-site-init.el: fi::emacs-type, which tells which type of emacs
	we are running; install fix for fi::build-time.

	* Makefile: load fi-version.el at byte-compile time

	* fi-keys.el: fi::emacs-type
	* fi-leep.el: fi::emacs-type
	* fi-utils.el: fi::emacs-type

*******************************************************************************
2.0.7, limited test release
*******************************************************************************

Tue Aug 31 12:01:14 1993  Kevin Layer  (layer@sole)
